# service-case-manager

./: .pre-commit-config.yaml  Makefile  README.md  cdk.context.json  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
case-manager/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
case-manager/app/: fields.py
case-manager/app/aws/: event_bridge.py
case-manager/app/migrations/: 0001_initial.py  0002_alter_caseexternalentitylink_unique_together_and_more.py  0002_externalsynclog_alter_case_type_and_more.py  0003_alter_case_type_alter_historicalcase_type.py  0003_case_creation_status_case_trello_url.py  0004_case_alias.py  0004_case_redcap_payload_historicalcase_redcap_payload_and_more.py
case-manager/app/models/: __init__.py  base.py  case.py  comment.py  external_entity.py  external_sync_log.py  pending_external_entity.py  state.py  user.py  utils.py
case-manager/app/schemas/: Makefile
case-manager/app/serializers/: __init__.py  case.py  comment.py  external_entity.py  external_sync_log.py  state.py  user.py  utils.py
case-manager/app/service/: case.py  case_finder.py  external_entity.py  redcap_import.py  utils.py
case-manager/app/settings/: aws.py  base.py  it.py  local.py
case-manager/app/tests/: __init__.py  factories.py  test_handler_metadata_manager_linking.py  utils.py  (+5 more)
case-manager/handler/: api.py  case_finder.py  django_command.py  metadata_manager_linking.py  migrate.py  process_event_record.py  redcap_import.py  sequence_run_linking.py  workflow_run_linking.py
case-manager/shared/: init-db.sql
(+64 files in other folders)
